# async_ocrspace

./: LICENSE  README.md  setup.cfg
.github/workflows/: build.yml  publish.yml
async_ocrspace/: __init__.py  async_ocrspace.py
