[metadata]
name = async_ocrspace
version = 0.0.1
keywords = ocrspace
url = https://github.com/TiSata/async_ocrspace
description = A Python asynchronous wrapper for ocr.space API
long_description_content_type= text/markdown
long_description = file: README.md
classifier = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = async_ocrspace
install_requires = aiohttp